--- a/public/exports/songs.html
+++ b/public/exports/songs.html
@@ -14,13 +14,18 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center shadow-sm vw-100 bg-white" style="min-height: 8vh;position: fixed;z-index: 1;top: 0;">
+        <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center shadow-sm vw-100 bg-white"
+            style="min-height: 8vh;position: fixed;z-index: 1;top: 0;">
             <div class="container-fluid">
                 <div class="container"><a class="navbar-brand" href="#">Loremtify</a>
                     <div class="col d-lg-flex justify-content-lg-center align-items-lg-center">
                         <div class="input-group" style="max-width: 50vh;">
-                            <div class="input-group-prepend"><span class="input-group-text bg-transparent text-dark">Search</span></div><input class="form-control" type="text" placeholder="Input title..."></div>
-                    </div><a class="navbar-brand" href="#">Favorites</a></div>
+                            <div class="input-group-prepend"><span
+                                    class="input-group-text bg-transparent text-dark">Search</span></div><input
+                                class="form-control" type="text" placeholder="Input title...">
+                        </div>
+                    </div><a class="navbar-brand" href="#">Favorites</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -34,115 +39,28 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col d-lg-flex justify-content-lg-center"><img src="assets/img/lime-listening-to-music.png" style="max-width: 100%;"></div>
+                        <div class="col d-lg-flex justify-content-lg-center"><img
+                                src="assets/img/lime-listening-to-music.png" style="max-width: 100%;"></div>
                     </div>
                 </div>
                 <div class="col-9 ml-auto my-auto py-3">
                     <div class="row">
                         <div class="col-4 my-2">
                             <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
+                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200"
+                                        style="width: 100%;">
                                     <div class="row py-2 px-3">
                                         <div class="col-auto">
                                             <h5>Taylor Swift</h5>
                                             <h6 class="text-muted mb-2">Enchanted</h6>
                                         </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
+                                        <div class="col-auto ml-auto"><i class="far fa-heart"
+                                                style="font-size: x-large;cursor: pointer;"></i></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4 my-2">
-                            <div class="card">
-                                <div class="card-body" style="padding: 0;"><img src="https://picsum.photos/200" style="width: 100%;">
-                                    <div class="row py-2 px-3">
-                                        <div class="col-auto">
-                                            <h5>Taylor Swift</h5>
-                                            <h6 class="text-muted mb-2">Enchanted</h6>
-                                        </div>
-                                        <div class="col-auto ml-auto"><i class="far fa-heart" style="font-size: x-large;cursor: pointer;"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
